# simple_cuda

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-single-platform.yml
examples/: atomic_max.cu  matrix_mul.cu  matrix_mul_variants.cu  test_nvfp4_rounding.cu
examples/chapter10/: reduce1d.cu
examples/chapter3/: matrix_mul_variants.cu  matrix_vector.cu
examples/chapter5/: tiled_mm.cu
examples/chapter6/: corner_turned.cu
examples/chapter7/: conv1d.cu  conv2d.cu
examples/cutlass/: tex.cu
examples/misc/: atomic_max.cu  c_groups.cu  float8_bug.cu  mem_bw.cu  tensors.cu
examples/mx/: num_to_ue8mo.cu
examples/saturated_casts/: matrix_cast.cu
src/: utils.cu
src/include/: tensors.h  utils.h
